objects/JBCXM__GSLRMConfig__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__BookingTypeLineItemMapping__c</fullName>
        <label>BookingTypeLineItemMapping</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__ConnectorConfig__c</fullName>
        <label>ConnectorConfig</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__ProductEnable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Enable</label>
        <type>Checkbox</type>
    </fields>
    <label>GSLRMConfig</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>NAME</columns>
        <columns>JBCXM__BookingTypeLineItemMapping__c</columns>
        <columns>JBCXM__ConnectorConfig__c</columns>
        <columns>JBCXM__ProductEnable__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GSLRMConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GSLRMConfig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>